<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>

  <parent>
    <groupId>com.ebay.raptorio.platform</groupId>
    <artifactId>raptor-io-parent</artifactId>
    <version>0.16.1-RELEASE</version>
    <relativePath></relativePath> <!-- lookup parent from repository -->
  </parent>

  <groupId>com.ebay.dap.epic</groupId>
  <artifactId>tdq-svc-ng</artifactId>
  <version>1.0.0-SNAPSHOT</version>
  <packaging>jar</packaging>

  <name>tdq-service</name>
  <description>Tracking Data Quality Backend Service Application</description>

  <properties>
    <java.version>17</java.version>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
    <docker.image.prefix>hub.tess.io/raptorontess</docker.image.prefix>
    <lombok.version>1.18.22</lombok.version>
    <swagger.version>2.9.2</swagger.version>
    <compiler.plugin.version>3.10.1</compiler.plugin.version>
    <mapstruct.version>1.5.3.Final</mapstruct.version>
    <fount.client.version>0.3.0</fount.client.version>
    <mysql.connector.version>8.0.28</mysql.connector.version>
    <mybatis-plus.version>3.5.1</mybatis-plus.version>
  </properties>

  <dependencies>
    <!--  Common  -->
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
      <scope>provided</scope>
    </dependency>
    <dependency>
      <groupId>org.mapstruct</groupId>
      <artifactId>mapstruct</artifactId>
      <version>${mapstruct.version}</version>
    </dependency>

    <!-- Raptor IO Components  -->
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-actuator-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-componentstatus-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-configbean-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-initializer-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-validateinternals-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-tomcat-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-globalconfig-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-micrometer-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-service-discovery-client-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-mcf-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-hystrix-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-ginger-client-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-jmx-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-metadata-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-opentracing-cal-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-jersey-operational-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-qualys-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-perfmon-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-firemarshall-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-traffic-mirror-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-featureconfig-starter</artifactId>
    </dependency>
<!--    <dependency>-->
<!--      <groupId>com.ebay.raptorio.component</groupId>-->
<!--      <artifactId>raptor-trustfabric-handler-starter</artifactId>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.ebay.raptorio.component</groupId>-->
<!--      <artifactId>raptor-trustfabric-client-starter</artifactId>-->
<!--    </dependency>-->
<!--    <dependency>-->
<!--      <groupId>com.ebay.raptorio.component</groupId>-->
<!--      <artifactId>raptor-envoyhealth-status-starter</artifactId>-->
<!--    </dependency>-->

    <!--  Logging  -->
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-logger-starter</artifactId>
    </dependency>

    <!--  Spring Boot Components  -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-aop</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-security</artifactId>
    </dependency>
    <dependency>
      <groupId>com.fasterxml.jackson.datatype</groupId>
      <artifactId>jackson-datatype-jsr310</artifactId>
    </dependency>

    <!-- ElasticSearch -->
    <dependency>
      <groupId>org.springframework.data</groupId>
      <artifactId>spring-data-elasticsearch</artifactId>
    </dependency>


    <!-- MySQL -->
    <dependency>
      <groupId>com.ebay.fount</groupId>
      <artifactId>managed-fount-client</artifactId>
      <version>${fount.client.version}</version>
    </dependency>
    <!-- Temporarily remove Flywaydb for SWU as Flyway 8 community edition does not support MySQL 5.7.
         Dependency tree: raptor-io:0.15.0-RELEASE -> spring-boot:2.6.6 -> flyway-core:8.0.5
         https://docs.spring.io/spring-boot/docs/2.6.6/reference/htmlsingle/#appendix.dependency-versions
     -->
    <!--
    <dependency>
      <groupId>org.flywaydb</groupId>
      <artifactId>flyway-core</artifactId>
    </dependency>
    -->
    <dependency>
      <groupId>mysql</groupId>
      <artifactId>mysql-connector-java</artifactId>
      <version>${mysql.connector.version}</version>
      <scope>runtime</scope>
    </dependency>
    <dependency>
      <groupId>com.baomidou</groupId>
      <artifactId>mybatis-plus-boot-starter</artifactId>
      <version>${mybatis-plus.version}</version>
    </dependency>
    <dependency>
      <groupId>org.mybatis</groupId>
      <artifactId>mybatis-typehandlers-jsr310</artifactId>
      <version>1.0.2</version>
    </dependency>

    <!-- Security -->
    <dependency>
      <groupId>io.jsonwebtoken</groupId>
      <artifactId>jjwt</artifactId>
      <version>0.9.1</version>
    </dependency>

    <!-- Swagger -->
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger2</artifactId>
      <version>${swagger.version}</version>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-swagger-ui</artifactId>
      <version>${swagger.version}</version>
    </dependency>
    <dependency>
      <groupId>io.springfox</groupId>
      <artifactId>springfox-bean-validators</artifactId>
      <version>${swagger.version}</version>
    </dependency>

    <!-- Test Dependencies  -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
        <exclusion>
          <groupId>com.vaadin.external.google</groupId>
          <artifactId>android-json</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    <!-- junit 5 -->
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.junit.vintage</groupId>
      <artifactId>junit-vintage-engine</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>commons-io</groupId>
      <artifactId>commons-io</artifactId>
      <scope>test</scope>
      <version>2.7</version>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-trustfabric-handler-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-trustfabric-client-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-envoyhealth-status-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-gis-aid-starter</artifactId>
    </dependency>
    <dependency>
      <groupId>com.ebay.raptorio.component</groupId>
      <artifactId>raptor-opentelemetry-starter</artifactId>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <version>${compiler.plugin.version}</version>
        <configuration>
          <source>17</source>
          <target>17</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.mapstruct</groupId>
              <artifactId>mapstruct-processor</artifactId>
              <version>${mapstruct.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>
      <!-- spring boot plugin -->
      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
        <configuration>
          <mainClass>com.ebay.dap.epic.tdq.MainApplication</mainClass>
        </configuration>
      </plugin>
      <!-- raptor.io plugin -->
      <plugin>
        <groupId>com.ebay.raptor.build</groupId>
        <artifactId>service-discovery-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.ebay.raptor.build</groupId>
        <artifactId>assembler-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.ebay.globalconfig</groupId>
        <artifactId>globalconfig-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>com.spotify</groupId>
        <artifactId>docker-maven-plugin</artifactId>
      </plugin>
      <plugin>
        <groupId>org.jacoco</groupId>
        <artifactId>jacoco-maven-plugin</artifactId>
      </plugin>
<!--      <plugin>-->
<!--        <groupId>com.github.spotbugs</groupId>-->
<!--        <artifactId>spotbugs-maven-plugin</artifactId>-->
<!--        <version>4.0.0</version>-->
<!--      </plugin>-->
      <plugin>
        <groupId>org.sonarsource.scanner.maven</groupId>
        <artifactId>sonar-maven-plugin</artifactId>
        <version>3.7.0.1746</version>
      </plugin>
      <!--      <plugin>-->
      <!--        <groupId>org.apache.maven.plugins</groupId>-->
      <!--        <artifactId>maven-surefire-plugin</artifactId>-->
      <!--        <version>3.0.0-M5</version>-->
      <!--        <configuration>-->
      <!--          <includes>-->
      <!--            <include>**/Test*.java</include>-->
      <!--            <include>**/*Test.java</include>-->
      <!--            <include>**/*Tests.java</include>-->
      <!--            <include>**/*TestCase.java</include>-->
      <!--            <include>**/*Suite.java</include>-->
      <!--          </includes>-->
      <!--          <failIfNoTests>false</failIfNoTests>-->
      <!--          &lt;!&ndash;<forkCount>2C</forkCount>&ndash;&gt;-->
      <!--          &lt;!&ndash;<reuseForks>false</reuseForks>&ndash;&gt;-->
      <!--          &lt;!&ndash;<argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>&ndash;&gt;-->
      <!--          <systemPropertyVariables>-->
      <!--            <jacoco-agent.destfile>target/jacoco.exec</jacoco-agent.destfile>-->
      <!--          </systemPropertyVariables>-->
      <!--        </configuration>-->
      <!--      </plugin>-->
    </plugins>
  </build>

<!--  <reporting>-->
<!--    <plugins>-->
<!--      <plugin>-->
<!--        <groupId>com.github.spotbugs</groupId>-->
<!--        <artifactId>spotbugs-maven-plugin</artifactId>-->
<!--        <version>4.0.0</version>-->
<!--      </plugin>-->
<!--    </plugins>-->
<!--  </reporting>-->

  <profiles>
    <profile>
      <id>sonar</id>
      <activation>
        <activeByDefault>true</activeByDefault>
      </activation>
      <properties>
        <!-- Optional URL to server. Default value is http://localhost:9000 -->
        <sonar.host.url>https://sonar-01-es.vip.es.ebay.com/</sonar.host.url>
        <sonar.projectKey>tdq-svc-ng</sonar.projectKey>
        <sonar.projectName>TDQ Service</sonar.projectName>
        <sonar.login>a3b235345cf8817eeb06064a3a5d21383b3ecb1a</sonar.login>
        <sonar.junit.reportsPath>target/surefire-reports</sonar.junit.reportsPath>
        <sonar.coverage.jacoco.xmlReportPaths>target/site/jacoco-ut/jacoco.xml</sonar.coverage.jacoco.xmlReportPaths>
      </properties>
    </profile>
  </profiles>

</project>
